Bug #46495
mgr: rgw doesn't show in service map
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
octopus, nautilus
Regression:
Yes
Severity:
3 - minor
Description
The e2e test is failing on master with the following error messages:
Spec Tests Passing Failing Pending Skipped ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ │ ✔ block/images.e2e-spec.ts 01:08 9 9 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ block/iscsi.e2e-spec.ts 00:03 2 2 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ block/mirroring.e2e-spec.ts 00:55 4 4 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/configuration.e2e-spec.ts 00:26 6 6 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/crush-map.e2e-spec.ts 00:04 2 2 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/hosts.e2e-spec.ts 00:10 6 6 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/logs.e2e-spec.ts 00:29 7 7 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/mgr-modules.e2e-spec.ts 00:28 5 5 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/monitors.e2e-spec.ts 00:05 3 3 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ cluster/osds.e2e-spec.ts 00:09 6 6 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ filesystems/filesystems.e2e-spec.ts 00:02 1 1 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ nfs/nfs.e2e-spec.ts 00:02 1 1 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ pools/pools.e2e-spec.ts 00:41 7 7 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✖ rgw/buckets.e2e-spec.ts 00:22 6 - 1 - 5 │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✖ rgw/daemons.e2e-spec.ts 00:22 5 - 1 - 4 │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✖ rgw/users.e2e-spec.ts 00:22 6 - 1 - 5 │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✖ ui/dashboard.e2e-spec.ts 00:50 4 2 2 - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ ui/language.e2e-spec.ts 00:03 2 2 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ ui/login.e2e-spec.ts 00:05 2 2 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✖ ui/navigation.e2e-spec.ts 00:05 3 2 1 - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ ui/notification.e2e-spec.ts 00:46 4 4 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ ui/role-mgmt.e2e-spec.ts 00:16 5 5 - - - │ ├────────────────────────────────────────────────────────────────────────────────────────────────┤ │ ✔ ui/user-mgmt.e2e-spec.ts 00:16 5 5 - - - │ └────────────────────────────────────────────────────────────────────────────────────────────────┘ ✖ 5 of 23 failed (22%) 08:22 101 81 6 - 14See
Related issues
History
#1 Updated by Kiefer Chang 8 months ago
The tests fail on the RGW page.
The RGW process is up but not in the service map.
# ceph -s *** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH *** 2020-07-13T06:32:24.383+0000 7f854a874700 -1 WARNING: all dangerous and experimental features are enabled. 2020-07-13T06:32:24.399+0000 7f854a874700 -1 WARNING: all dangerous and experimental features are enabled. cluster: id: 1eebe477-1e64-476f-8c2b-f5630c54bd58 health: HEALTH_OK services: mon: 3 daemons, quorum a,b,c (age 19m) mgr: x(active, since 19m) mds: a:1 {0=c=up:active} 2 up:standby osd: 3 osds: 3 up (since 19m), 3 in (since 19m) data: pools: 7 pools, 169 pgs objects: 226 objects, 9.9 KiB usage: 6.0 GiB used, 297 GiB / 303 GiB avail pgs: 169 active+clean # ps aux | grep rgw root 21052 0.3 0.2 5149488 84644 ? Ssl 06:13 0:03 /ceph/build/bin/radosgw -c /ceph/build/ceph.conf --log-file=/ceph/build/out/radosgw.8000.log --admin-socket=/ceph/build/out/radosgw.8000.asok --pid-file=/ceph/build/out/radosgw.8000.pid --debug-rgw=20 --debug-ms=1 -n client.rgw.8000 --rgw_frontends=beast port=8000
#2 Updated by Kiefer Chang 8 months ago
- Project changed from mgr to rgw
- Category deleted (
dashboard/qa)
It seems to happen after https://github.com/ceph/ceph/pull/34861
I can see the rgw in the service map by reverting the change in https://github.com/ceph/ceph/pull/34861/files#diff-6e2b0f299672aec02388db8d25680537
#3 Updated by Kiefer Chang 8 months ago
A PR was created with changes in https://github.com/ceph/ceph/pull/34861 reverted for testing purpose.
The Dashboard tests in the PR succeeded.
#4 Updated by Tiago Melo 8 months ago
- Subject changed from mgr/dashboard: e2e test fails on master to rgw: rgw not show in service map
#5 Updated by Tiago Melo 8 months ago
- Subject changed from rgw: rgw not show in service map to rgw: rgw doesn't show in service map
#7 Updated by Kefu Chai 8 months ago
- Related to Bug #45349: mds: send scrub status to ceph-mgr only when scrub is running (or paused, etc..) added
#9 Updated by Kefu Chai 8 months ago
- Duplicated by Bug #46442: mgr/dashboard: ceph-api-nightly-master-backend Jenkins test error: test_get_export (tasks.mgr.dashboard.test_ganesha.GaneshaTest) added
#13 Updated by Nathan Cutler 7 months ago
- Copied to Backport #46588: octopus: mgr: rgw doesn't show in service map added
#14 Updated by Nathan Cutler 7 months ago
- Copied to Backport #46589: nautilus: mgr: rgw doesn't show in service map added