mgr/DaemonServer: keep daemon in service map when it has no tasks

we should not remove a daemon from service map even if it has no task
running, as it is not an evidence that the service is removed from the
cluster.

this change partially reverts 5da8a3884fac2582579245371381e61aec203123

Fixes: https://tracker.ceph.com/issues/46495
Signed-off-by: Kefu Chai <kchai@redhat.com>